--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,16 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: SonarSource.sonarqube.15B84CA1-B62F-4A2A-A403-89B77A063157.SonarQubePrepare@5
+  displayName: 'Prepare analysis on SonarQube'
+  inputs:
+    SonarQube: 'Svc-SonarQube'
+    scannerMode: Other
+    extraProperties: |
+     # Additional properties that will be passed to the scanner,
+     # Put one key=value per line, example:
+     # sonar.exclusions=**/*.bin
+     sonar.projectKey=Terraform_azure_project_Terraform_azure_project_AYP0eMpxy5JD5YuiX8ei
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
